--- a/public/_layout.jade
+++ b/public/_layout.jade
@@ -1,7 +1,12 @@
 doctype
 html
   head
-    title Portfolio
+    title #{title}
     link(rel="stylesheet" href="/css/main.css")
+    meta(name="viewport" content="width=device-width initial-scale=1 shrink-to-fit=no")
+
   body
     != yield
+    
+    script(src="/js/anime.min.js")
+    script(src="/js/fx.js")
