--- a/public/_layout.jade
+++ b/public/_layout.jade
@@ -8,5 +8,7 @@ html
   body
     != yield
     
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js")
     script(src="/js/anime.min.js")
+    script(src="/js/main.js")
     script(src="/js/fx.js")
